1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (jdkdosdir): Substitute.
	(JAVACLASSES): Single quote.

	* Makefile.common.in (SWARMLIBS): Add JAVASWARMLIBS after as well.

1999-05-15  Alex Lancaster  <alex@santafe.edu>

	* protocol.el (extract-doc-string): Set the substr to start after
	position 4, rather than 5, to ensure that the whitespace after the
	colon in the doc-string is considered significant.
	(append-buf): Ignore whitespace at the end of a line, so that
	contiguous text can be generated.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVAC): Substitute.

1999-05-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SUPPORTLDFLAGS): Move PNGLDFLAGS and ZLIBLDFLAGS
	before the common BLT, Tcl/Tk paths (things likely to be in /usr/local
	after things more likely to have custom installs).

1999-05-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.tests.in (INCLUDES): Add top_builddir/libobjc and
	top_srcdir/libobjc.

1999-05-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.appl.in (clean): Add .libs/$(APPEXE).

1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* common.el (ensure-ending-slash): New function.
	(get-builddir, get-top-builddir): Use it.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SUPPORTLDFLAGS): Move FFILDFLAGS and HDF5FLAGS
	before the others, as they are more likely to be non-default.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (_SWARMLIBS): New variable for just the
	module libraries.
	(SWARMLIBS): Use it, adding $(JAVASWARMLIBS).

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (swarm_JAVASWARMLIBS): Substitute JAVASWARMLIBS.
	(SWARM_LDADD): Use it.

	* Makefile.tests.in (JAVASWARMLIBS): Substitute.
	(LIBS): Use it.
	(javaswarmdir): New variable.
	(SWARMBUILDLDFLAGS): Use it.
